Project spoons_db {
  database_type: 'PostgreSQL'
  Note: 'A database for a restaurant website'
}

Table users {
  id integer [primary key]
  uuid string
  first_name varchar
  last_name varchar
  email varchar
  password varchar
  role user_role
  status user_status
  created_at timestamp
  updated_at timestamp
}

Enum user_role {
  admin
  client
}

Enum user_status {
  active
  inactive
  pending
}

Table addresses {
  id integer [primary key]
  user_id integer
  address_line1 varchar
  address_line2 varchar
  city varchar
  state varchar
  postal_code varchar
}

Table orders {
  id integer [primary key]
  order_number integer
  user_id integer
  total decimal
  status order_status
  created_at timestamp
  updated_at timestamp
}

Enum order_status {
  pending
  processing
  confirmed
  delivered
}

Table order_items {
  id integer [primary key]
  order_id integer
  menu_id integer
  quantity integer
  price decimal
}

Table menu {
  id integer [primary key]
  name varchar
  description varchar
  category varchar
  tag varchar
  photourl varchar
  status menu_status
  price decimal
  created_at timestamp
  updated_at timestamp
}

Enum menu_status {
  Available
  OutOfStock
  Discontinued
  Special
  ComingSoon
}

Table menu_tags {
  id integer [primary key]
  name varchar
}

Table menu_menu_tags {
  tag_id integer
  menu_id integer

  indexes {
    (tag_id, menu_id) [pk]
  }
}

Table carts {
  id integer [primary key]
  user_id integer
  menu_id integer
  quantity integer
  created_at timestamp
  updated_at timestamp
}

Ref: addresses.user_id > users.id
Ref: orders.user_id > users.id
Ref: order_items.order_id > orders.id
Ref: order_items.menu_id > menu.id
Ref: menu_menu_tags.tag_id > menu_tags.id
Ref: menu_menu_tags.menu_id > menu.id
Ref: carts.user_id > user.id
Ref: carts.menu_id > menu.id